--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
 spring.datasource.url = jdbc:mysql://mysql-test:3306/test
-spring.datasource.username = root
-spring.datasource.password = password
+spring.datasource.username = user
+spring.datasource.password = password123
 
 
 spring.datasource.testWhileIdle = true
@@ -16,4 +16,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
